2005-02-23  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* VERSION: Bumped package manager version to 0.24.0, a new release

2005-02-23  Daniel Macks  <dmacks@netspace.org>

	* fink.8.in, fink.conf.5.in: Note that -b effect is *after*
	resolver chooses the version.

2005-02-22  Daniel Macks  <dmacks@netspace.org>

	* fink.in, fink.conf.5.in: Removed Verbosity:4 (pendantic) level
	* fink.8.in: Documented new --(no-)pendantic flag for 'fink validate'

2005-02-20  Daniel Macks  <dmacks@netspace.org>

	* fink.in, fink.8.in: backing out 'snapshot' until after 0.24

2005-02-17  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* VERSION: Bumped package manager version to 0.23.6, a bugfix
	release on branch_0_23

2005-02-13  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* bootstrap.pl, fink.info.in: allow the creation of several .info
	files from a single .info.in, depending on %{Distribution}
	* REVISION: new file to specify revision numbers for variant info files

2005-02-09  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* fink.in: Clean up 'fink help' output.
	* fink.8.in: Move 'fink cleanup' description into the 21st century.

2005-02-08  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* bootstrap.pl, postinstall.pl.in: Adjust prompt*() calls for new
	named-parameters API.

2005-02-06  Justin F. Hallett  <thesin@users.sourceforge.net>

	* shlibs.default.in: Changed to use new libncurses5-shlibs shlibs

2005-02-05  Daniel Macks  <dmacks@netspace.org>

	* fink.in: ...which it now does, so reviving it

2005-02-05  Justin F. Hallett  <thesin@users.sourceforge.net>

	* fink.in: backing out last change till it's complete and works

2005-02-05  Daniel Macks  <dmacks@netspace.org>

	* fink.in: Instead of decomposing and rebuilding cmdline, just
	save original @ARGV

2005-02-04  Chris Dolan <chrisdolan@users.sourceforge.net>

	* fink.in, fink.8.in: Add snapshot command

2005-01-31  Benjamin Reed  <rangerrick@users.sourceforge.net>
