@@ -1,3 +1,9 @@
+2005-02-23  Daniel Macks  <dmacks@netspace.org>
+
+	* CLI.pm: Added new "intro" param to prompt_selection
+	* Configure.pm, Engine.pm, PkgVersion.pm, SelfUpdate.pm: use new
+	"intro" param to prompt_selection
+
 2005-02-24  Dave Morrison  <dmrrsn@users.sourceforge.net>
 
 	*VirtPackage.pm: perl packages now Provide digest-pm (when >= 5.8.0)
